# kata_number_to_french

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kata_number_to_french/: __init__.py  __main__.py  french_numbers.py  main.py
src/kata_number_to_french/tests/: test_limits.py  test_ones.py  test_plurals.py  test_units.py
